--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Initialize ReactJS</title>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARewUOnU_ihrOawcwjTS-G-EEJnTcVHRg&libraries=geometry,places"></script>
+
 </head>
 
 <body>
