--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Initialize ReactJS</title>
+  <title>Pỉ Noong</title>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARewUOnU_ihrOawcwjTS-G-EEJnTcVHRg&libraries=geometry,places"></script>
 
 </head>
